--- a/Cargo.toml
+++ b/Cargo.toml
@@ -303,6 +303,9 @@ name = "ring"
 [dependencies]
 untrusted = { version = "0.7.1" }
 
+[target.'cfg(target_os = "vita")'.dependencies]
+getrandom = { version = "0.2.8" }
+
 [target.'cfg(any(target_arch = "x86",target_arch = "x86_64", all(any(target_arch = "aarch64", target_arch = "arm"), any(target_os = "android", target_os = "fuchsia", target_os = "linux"))))'.dependencies]
 spin = { version = "0.5.2", default-features = false }
 
